Fixed text overflow on feature tiles when at narrow resolutions.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,7 +281,7 @@ body {
 
 .features-tile {
     background-color: rgba(245, 242, 245, 0.8);
-    height: 32.5vh;  
+    min-height: 32.5vh;  
     border-radius: 25px;     
 }
 
